--- a/menu_rollover.css
+++ b/menu_rollover.css
@@ -1,32 +1,77 @@
-<!DOCTYPE html>
-<html lang-"en">
-    <head>
-        <meta charset="utf-8">
-        <title>Basic HTML Template</title>
-        <link rel="stylesheet" href="./css/basic_style.css">
-    </head>
-    <body>
 
+body (
+    background: #184352;
+)
 
-        <div class="wrap">
-            <div class-"menu-container">
-                <ul class="menu">
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Portfolio
-                        <ul class="submenu">
-                            <li>Page 1</li>
-                            <li>page 2</li>
-                            <li>page 3</li>
-                            <li>page 4</li>
-                        </ul>
-                    </li>
-                    </li>Contact</li>
-                </ul>
-            </div>
-        </div>
+.wrap (
+    top: 0;
+    left: 0;
+    height: auto;
+    width: 100%;
+)
 
+.menu-container {
+    top: 0;
+    left: 0;
+    /* To the top edge of the screen */
+    position: absolute;
+    width: 100%;
+    background-color: #184352;
+}
 
+.menu (
+    font: bold 12px/18px sans-serif;
+    text-align: center;
+    display: inline;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+)
 
-    </body>
-</html>
+.menu li (
+    color: #B3B3B3;
+    display: inline-block;
+    margin-right: -2px;
+    positions: relative;
+    padding: 12px 40px;
+    border: 1px solid #9D9FA2;
+    border-radius: 1.5px;
+    background-color: #387593;
+    cursor: pointer;
+)
+
+.menu li:hover (
+    background-color: #5EAFDF;
+    color: #fff;
+)
+
+.menu li:hover ul (
+    display: block;
+    opacity: 1;
+    /* While hovered, drop down-menu appears
+        This also avoids a block-level bug */
+        visibility: visible;
+)
+
+.submenu (
+    padding: 0;
+    left: 0;
+    position: absolute;
+    top: 43.5px;
+    width:125.5px;
+    opacity: 0;
+    /* While not being hovered, drop down-menu hides
+        This also avoids a block-level bug */
+    visibility: hidden;
+)
+
+.submenu li (
+    background-color: #387593;
+    display: block;
+    color: #B3B3B3;
+)
+
+.submenu li:hover {
+    color: #fff;
+    background-color: #5EAFDF;
+}
